fix spacing

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -305,7 +305,7 @@ section.recipe {
   background: #fff;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  padding: 5rem 1.5rem 1.5rem;
+  padding: 5rem 1.5rem .25rem;
   text-align: center;
   position: relative;
   overflow: visible;
